--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,7 +12,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
       - name: download
-        uses: emo-bon/populate-action@dev
+        uses: emo-bon/populate-action@main
       - name: git-auto-commit-action
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
